# actix_url_shrink_short

./: .env  Cargo.toml  README.md  dump.sql
src/: main.rs
src/controller/: url_controller.rs
src/dao/: url_dao.rs
src/pojo/: app_state.rs  mod.rs  msg.rs  user.rs
src/util/: global_util.rs  mod.rs
web/: index.html
web/url_shrink_short_vue/: README.md  package-lock.json  package.json
web/url_shrink_short_vue/src/: main.js
web/url_shrink_short_vue/src/router/: index.js
web/url_shrink_short_vue/src/views/: Index.vue
